fix overflow-x

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,12 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .container {
   display: flex;
 }
@@ -183,6 +189,7 @@ body {
 .footer {
   background-color: #333333;
   justify-content: space-between;
+  width: 100%;
 }
 
 .footer__link {
